--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
   },
