--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
+    "encoding": "^0.1.13",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   }
